flowc/tests/fixtures/check_e140_where_suggestion.flow
type Addr = { zip: int }
type User = { addr: Addr }

tool users() -> [User]
  effect deterministic

flow demo(string) -> [User] {
  us = users()
     | where addr.zp <= 100
  us
}
